# clmLibrary

./: .gitignore  CMakeLists.txt  Intrinsics.h  README.md
benchmark/: CMakeLists.txt  cmake_install.cmake  time_bench.h  time_log.h
clmMath/: CMakeLists.txt  clm_color.h  clm_gen_math.cpp  clm_gen_math.h  clm_geo.h  clm_matrix.h  clm_rect.h  clm_vector.cpp  clm_vector.h  cmake_install.cmake
clmUtil/: CMakeLists.txt  array.h  clm_concepts_ext.h  clm_err.cpp  clm_err.h  clm_system.h  clm_util.h  cmake_install.cmake
